--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.5.1",
     "react-toastify": "^11.0.5",
     "reactjs-popup": "^2.0.6",
